syntax = "proto3";

option java_multiple_files = true;
package com.glance.spaces.zapp.content.common;


import "com/glance/spaces/zapp/content/common/weather_common.proto";

message WeatherForecast {
  WeatherForecastType forecastType = 1;
  int64 timestamp = 2;
  BaseWeatherContent base_weather_content = 3;
}